Release ...
* troff: The ".trimat" and ".bleedat" requests have been added to include
  advice about the "TrimBox" and "BleedBox" page parameters to a PDF
  distiller command, particularly for PDF/X generation.
* [nt]roff: The ".af" request now handles long register names correctly.
* troff: Kerning now works correctly in combination with leaders and
  fields.
* troff: The ".tm" and ".write" requests now correctly handle locale-
  dependent input characters as well as one-character escape sequences
  that are interpreted in copy mode such as "\&".
* [nt]roff: The "-msafe" macro now correctly removes the ".do pso",
  ".do open", and ".do opena" requests in -x1 (default) mode. They
  were previously removed in -x2 mode only.

Release 051212
* [nt]roff: The ".pso" request has been added; it reads the output of
  a command as input to troff.
* [nt]roff: The ".tmc" request has been added; it works like ".tm" but
  does not terminate the message with a newline.
* [nt]roff: The ".open", ".opena", ".write", ".writec", and ".close"
  requests have been added. They work like ".tm" but write to a named
  file.
* [nt]roff: The ".warn" request has been added; it enables additional
  warning messages. The "\n[.warn]" register prints bits representing
  the warning categories that are currently enabled.
* [nt]roff: The ".spreadlimit" request has been added; it can be used
  to print a warning when the adjustment computed for an output line
  exceeds a certain value.
* [nt]roff: The ".mediasize" request has been added; it causes dpost to
  specify the page size using the PostScript "setpagedevice" operator.
  This is mainly useful for creating PDF documents.
* [nt]roff: The "\n[hours]", "\n[minutes]", "\n[seconds]", and "\n[year]"
  registers have been added to print more parts of the current time.
* [nr]roff: Availability of extensions is now controlled using an "-xN"
  option, where "N" is the extension level. The previous "-x" and "-X"
  options are still accepted.